k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: micro-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          # image: 695094375859.dkr.ecr.us-east-1.amazonaws.com/image-backend:3.0
          image: mdmokhtar/gig-router-backend:46692f0ab3e120bda39f67939394fd91a96fc32f
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: micro-prod
spec:
  selector:
    app: backend
  ports:
    - port: 8000
      targetPort: 8000
