k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: micro-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          # image: ahmed3013/front_image:3.0
          image: mdmokhtar/gig-router-frontend:46692f0ab3e120bda39f67939394fd91a96fc32f
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: micro-prod
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
